feat: Implement Phase 3 of the philosopher simulation
- Updated Makefile to include new source files and test targets for Phase 3.
- Added synchronization functions in sync.c for thread-safe operations.
- Created actions.c for philosopher actions: taking/dropping forks, eating, sleeping, and thinking.
- Introduced routine.c to manage philosopher thread routines and thread creation/joining.
- Developed main.c as the entry point for the simulation, initializing and managing the philosopher table.
- Added test_phase3.c to implement unit tests for synchronization functions, philosopher actions, and integration scenarios.
- Enhanced philo.h to declare new functions and structures for Phase 3 functionality.

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -19,7 +19,7 @@ INCLUDES = -I./include
 
 # Source files
 SRC_DIR = src
-SRC_FILES = parsing.c time.c init.c cleanup.c
+SRC_FILES = main.c parsing.c time.c init.c cleanup.c sync.c actions.c routine.c
 SRCS = $(addprefix $(SRC_DIR)/, $(SRC_FILES))
 
 # Test files
@@ -76,8 +76,18 @@ test_phase2: $(OBJ_DIR)/$(TEST_DIR)/test_phase2.o $(OBJ_DIR)/parsing.o $(OBJ_DIR
 	@$(CC) $(CFLAGS) $(INCLUDES) $^ -o test_phase2
 	@echo "$(GREEN)✓ Phase 2 test suite compiled successfully!$(RESET)"
 
+# Build and run Phase 3 tests
+test3: test_phase3
+	@echo "$(BLUE)Running Phase 3 Unit Tests...$(RESET)"
+	@./test_phase3
+
+test_phase3: $(OBJ_DIR)/$(TEST_DIR)/test_phase3.o $(OBJ_DIR)/parsing.o $(OBJ_DIR)/time.o $(OBJ_DIR)/init.o $(OBJ_DIR)/cleanup.o $(OBJ_DIR)/sync.o $(OBJ_DIR)/actions.o $(OBJ_DIR)/routine.o
+	@echo "$(BLUE)Compiling Phase 3 test suite...$(RESET)"
+	@$(CC) $(CFLAGS) $(INCLUDES) $^ -o test_phase3
+	@echo "$(GREEN)✓ Phase 3 test suite compiled successfully!$(RESET)"
+
 # Run all tests
-test_all: test1 test2
+test_all: test1 test2 test3
 	@echo "$(GREEN)All test phases completed!$(RESET)"
 
 # Legacy test name for backward compatibility
@@ -90,7 +100,7 @@ clean:
 
 fclean: clean
 	@echo "$(RED)Removing executables...$(RESET)"
-	@rm -f $(NAME) test_phase1 test_phase2
+	@rm -f $(NAME) test_phase1 test_phase2 test_phase3
 	@echo "$(GREEN)✓ Full clean complete!$(RESET)"
 
 re: fclean all
@@ -100,4 +110,4 @@ norm:
 	@echo "$(BLUE)Running norminette...$(RESET)"
 	@norminette include/ src/ || true
 
-.PHONY: all clean fclean re test test1 test2 test_all norm
+.PHONY: all clean fclean re test test1 test2 test3 test_all norm
