feat: Add monitor functionality to philosopher simulation
- Update Makefile to include monitor.c
- Enhance philo.h with monitor function declarations
- Implement monitor thread in monitor.c to check for philosopher deaths and meal completion
- Modify main.c to start and join the monitor thread
- Add join_monitor function to wait for the monitor thread
- Improve synchronization in safe_print and announce_death functions

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -19,7 +19,7 @@ INCLUDES = -I./include
 
 # Source files
 SRC_DIR = src
-SRC_FILES = main.c parsing.c time.c init.c cleanup.c sync.c actions.c routine.c
+SRC_FILES = main.c parsing.c time.c init.c cleanup.c sync.c actions.c routine.c monitor.c
 SRCS = $(addprefix $(SRC_DIR)/, $(SRC_FILES))
 
 # Test files
